fixed footer and body. need to realign picture

--- a/main.css
+++ b/main.css
@@ -3,7 +3,6 @@
     text-align: center;
     color: white;
     margin-top: 18%;
-    font-style: ;
 }
 
 h1{
